# django-zodb-backend

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: rebase-django-fork.yml  runtests.py  tests.yml  zodb_settings.py
django_zodb_backend/: base.py  client.py  compiler.py  creation.py  dbapi.py  features.py  introspection.py  operations.py  schema.py
docs/: architecture.rst  comparison.rst  conf.py  decisions.rst  django-fork.rst  getting-started.rst  index.rst  release-process.rst  roadmap.rst  storage-backends.rst  testing.rst
tests/: __init__.py  test_backend.py  test_zeo.py
