[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "django-zodb-backend"
dynamic = ["version"]
description = "Django ZODB Backend"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    { name = "django-zodb contributors" },
]
keywords = ["zodb", "django", "database", "backend", "object-database"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=6.0",
    "ZODB>=6.0",
    "BTrees>=6.0",
    "persistent>=6.0",
    "transaction>=5.0",
]

[project.optional-dependencies]
filestorage = [
    "ZODB>=6.0",
]
zeo = [
    "ZEO>=5.0",
]
docs = [
    "sphinx>=7",
    "furo",
    "sphinx-copybutton",
]
dev = [
    "ruff",
    "pytest",
    "pytest-timeout",
]

[project.urls]
Homepage = "https://github.com/django-zodb/django-zodb-backend"
Documentation = "https://django-zodb-backend.readthedocs.io"
Source = "https://github.com/django-zodb/django-zodb-backend"
Tracker = "https://github.com/django-zodb/django-zodb-backend/issues"

[tool.setuptools.dynamic]
version = {attr = "django_zodb_backend.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["django_zodb_backend*"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pytest-timeout",
    "pre-commit",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]
ignore = ["S101", "RUF012"]
